test/fail/parse_stmt_missing_semicolon.ms
fn bad() {
  val x := 1
  val y := 2
};
